syntax = "proto3";
option java_multiple_files = true;
package com.grpc;

import "google/rpc/status.proto";

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  oneof message {
    string greeting = 1;
    google.rpc.Status status = 2;
  }

}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
}